@@ -1,4 +1,7 @@
 requires 'perl' => '5.006';
 requires 'Role::Tiny' => '2.000001';
 requires 'Scalar::Util';
+suggests 'Future';
 test_requires 'Test::More' => '0.88';
+test_requires 'Test::Needs';
+author_requires 'Future';
