@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Add once_f method to subscribe and return a Future
 
 0.002     2015-10-27 21:22:12 EDT
   - Switch to Role::Tiny based role as attribute is not needed
